--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assessment By WomenTechster</title>
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 
 
@@ -34,11 +34,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">Luke Skywalker</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 172</p>
+                            <p>Gender: male</p>
+                            <p>Name: Luke Skywalker</p>
                         </div>
 
                     </div>
@@ -51,11 +51,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">C-3PO</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 167</p>
+                            <p>Gender: n/a</p>
+                            <p>Name: C-3PO</p>
                         </div>
 
                     </div>
@@ -67,27 +67,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">R2-D2</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
-                        </div>
-
-                    </div>
-                </div>
-                <div id="content-item">
-                    <div class="img">
-                        <img src="images/img-two.png" alt="">
-                    </div>
-
-
-                    <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
-                        <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 202</p>
+                            <p>Gender: male</p>
+                            <p>Name: R2-D2</p>
                         </div>
 
                     </div>
@@ -99,11 +83,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">Darth Vader</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 202</p>
+                            <p>Gender: male</p>
+                            <p>Name: Darth Vader</p>
                         </div>
 
                     </div>
@@ -115,11 +99,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">Leia Organa</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 150</p>
+                            <p>Gender: female</p>
+                            <p>Name: Leia Organa</p>
                         </div>
 
                     </div>
@@ -131,11 +115,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">Owen Lars</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 178</p>
+                            <p>Gender: male</p>
+                            <p>Name: Owen Lars</p>
                         </div>
 
                     </div>
@@ -147,11 +131,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">Beru Whitesun lars</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 165</p>
+                            <p>Gender: female</p>
+                            <p>Name: : Beru Whitesun lars</p>
                         </div>
 
                     </div>
@@ -163,11 +147,11 @@
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
+                        <button id="btn1">R5-D4</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
-                            <p>Name: Obi-Wan Kenobi</p>
+                            <p>Height: 97</p>
+                            <p>Gender: n/a</p>
+                            <p>Name: R5-D4</p>
                         </div>
 
                     </div>
@@ -179,10 +163,27 @@
 
 
                     <div class="text">
+                        <button id="btn1">Biggs Darklighter</button>
+                        <div class="sub-text" id="sub-text-one">
+                            <p>Height: 183</p>
+                            <p>Gender: male</p>
+                            <p>Name:Biggs Darklighter</p>
+                        </div>
+
+                    </div>
+                </div>
+                
+                <div id="content-item">
+                    <div class="img">
+                        <img src="images/img-two.png" alt="">
+                    </div>
+
+
+                    <div class="text">
                         <button id="btn1">Obi-Wan Kenobi</button>
                         <div class="sub-text" id="sub-text-one">
-                            <p>Height: 1.85m</p>
-                            <p>Gender:Male</p>
+                            <p>Height: 182</p>
+                            <p>Gender: male</p>
                             <p>Name: Obi-Wan Kenobi</p>
                         </div>
 
