--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assessment By WomenTechster</title>
+    <!-- styling -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -34,7 +35,7 @@
 
 
                     <div class="text">
-                        <button id="btn1">Luke Skywalker</button>
+                        <button id="btn-one">Luke Skywalker</button>
                         <div class="sub-text" id="sub-text-one">
                             <p>Height: 172</p>
                             <p>Gender: male</p>
@@ -51,8 +52,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">C-3PO</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-two">C-3PO</button>
+                        <div class="sub-text" id="sub-text-two">
                             <p>Height: 167</p>
                             <p>Gender: n/a</p>
                             <p>Name: C-3PO</p>
@@ -67,8 +68,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">R2-D2</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-three">R2-D2</button>
+                        <div class="sub-text" id="sub-text-three">
                             <p>Height: 202</p>
                             <p>Gender: male</p>
                             <p>Name: R2-D2</p>
@@ -83,8 +84,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">Darth Vader</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-four">Darth Vader</button>
+                        <div class="sub-text" id="sub-text-four">
                             <p>Height: 202</p>
                             <p>Gender: male</p>
                             <p>Name: Darth Vader</p>
@@ -99,8 +100,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">Leia Organa</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-five">Leia Organa</button>
+                        <div class="sub-text" id="sub-text-five">
                             <p>Height: 150</p>
                             <p>Gender: female</p>
                             <p>Name: Leia Organa</p>
@@ -115,8 +116,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">Owen Lars</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-six">Owen Lars</button>
+                        <div class="sub-text" id="sub-text-six">
                             <p>Height: 178</p>
                             <p>Gender: male</p>
                             <p>Name: Owen Lars</p>
@@ -131,8 +132,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">Beru Whitesun lars</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-seven">Beru Whitesun lars</button>
+                        <div class="sub-text" id="sub-text-seven">
                             <p>Height: 165</p>
                             <p>Gender: female</p>
                             <p>Name: : Beru Whitesun lars</p>
@@ -147,8 +148,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">R5-D4</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-eight">R5-D4</button>
+                        <div class="sub-text" id="sub-text-eight">
                             <p>Height: 97</p>
                             <p>Gender: n/a</p>
                             <p>Name: R5-D4</p>
@@ -163,8 +164,8 @@
 
 
                     <div class="text">
-                        <button id="btn1">Biggs Darklighter</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-nine">Biggs Darklighter</button>
+                        <div class="sub-text" id="sub-text-nine">
                             <p>Height: 183</p>
                             <p>Gender: male</p>
                             <p>Name:Biggs Darklighter</p>
@@ -175,13 +176,13 @@
                 
                 <div id="content-item">
                     <div class="img">
-                        <img src="images/img-two.png" alt="">
+                        <img src="images/img-four.png" alt="">
                     </div>
 
 
                     <div class="text">
-                        <button id="btn1">Obi-Wan Kenobi</button>
-                        <div class="sub-text" id="sub-text-one">
+                        <button id="btn-ten">Obi-Wan Kenobi</button>
+                        <div class="sub-text" id="sub-text-ten">
                             <p>Height: 182</p>
                             <p>Gender: male</p>
                             <p>Name: Obi-Wan Kenobi</p>
@@ -197,6 +198,8 @@
 
         <!-- ends here -->
     </div>
+    <!-- javascript linking -->
+    <script src="main.js"></script>
 </body>
 
 </html>
