--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
 
                     <div class="text">
-                        <button id="btn-one">Luke Skywalker</button>
+                        <button onclick="showluke()" id="btn-one">Luke Skywalker</button>
                         <div class="sub-text" id="sub-text-one">
                             <p>Height: 172</p>
                             <p>Gender: male</p>
+                            
                             <p>Name: Luke Skywalker</p>
                         </div>
 
@@ -52,7 +53,7 @@
 
 
                     <div class="text">
-                        <button id="btn-two">C-3PO</button>
+                        <button onclick="showc()" id="btn-two">C-3PO</button>
                         <div class="sub-text" id="sub-text-two">
                             <p>Height: 167</p>
                             <p>Gender: n/a</p>
@@ -68,7 +69,7 @@
 
 
                     <div class="text">
-                        <button id="btn-three">R2-D2</button>
+                        <button onclick="showr()" id="btn-three">R2-D2</button>
                         <div class="sub-text" id="sub-text-three">
                             <p>Height: 202</p>
                             <p>Gender: male</p>
@@ -84,7 +85,7 @@
 
 
                     <div class="text">
-                        <button id="btn-four">Darth Vader</button>
+                        <button onclick="showd()" id="btn-four">Darth Vader</button>
                         <div class="sub-text" id="sub-text-four">
                             <p>Height: 202</p>
                             <p>Gender: male</p>
@@ -100,7 +101,7 @@
 
 
                     <div class="text">
-                        <button id="btn-five">Leia Organa</button>
+                        <button onclick="showl()" id="btn-five">Leia Organa</button>
                         <div class="sub-text" id="sub-text-five">
                             <p>Height: 150</p>
                             <p>Gender: female</p>
@@ -116,7 +117,7 @@
 
 
                     <div class="text">
-                        <button id="btn-six">Owen Lars</button>
+                        <button onclick="showo()" id="btn-six">Owen Lars</button>
                         <div class="sub-text" id="sub-text-six">
                             <p>Height: 178</p>
                             <p>Gender: male</p>
@@ -132,7 +133,7 @@
 
 
                     <div class="text">
-                        <button id="btn-seven">Beru Whitesun lars</button>
+                        <button onclick="showb()" id="btn-seven">Beru Whitesun lars</button>
                         <div class="sub-text" id="sub-text-seven">
                             <p>Height: 165</p>
                             <p>Gender: female</p>
@@ -148,7 +149,7 @@
 
 
                     <div class="text">
-                        <button id="btn-eight">R5-D4</button>
+                        <button onclick="showrd()" id="btn-eight">R5-D4</button>
                         <div class="sub-text" id="sub-text-eight">
                             <p>Height: 97</p>
                             <p>Gender: n/a</p>
@@ -164,7 +165,7 @@
 
 
                     <div class="text">
-                        <button id="btn-nine">Biggs Darklighter</button>
+                        <button onclick="showbd()" id="btn-nine">Biggs Darklighter</button>
                         <div class="sub-text" id="sub-text-nine">
                             <p>Height: 183</p>
                             <p>Gender: male</p>
@@ -173,7 +174,7 @@
 
                     </div>
                 </div>
-                
+
                 <div id="content-item">
                     <div class="img">
                         <img src="images/img-four.png" alt="">
@@ -181,7 +182,7 @@
 
 
                     <div class="text">
-                        <button id="btn-ten">Obi-Wan Kenobi</button>
+                        <button onclick="showowk()" id="btn-ten">Obi-Wan Kenobi</button>
                         <div class="sub-text" id="sub-text-ten">
                             <p>Height: 182</p>
                             <p>Gender: male</p>
